Added Google verification meta tag
Added Google verification meta tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="google-site-verification" content="5XwZz4lXoLhLPUU0B55tQlHqmvS1JS1x7iNa-E_Z-m4" />
+
   <title>بلسم الشنطي | مصممة جرافيك</title>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
   <style>
